# typ-tmpl

./: AGENTS.md  README.md  docker-compose.yml  justfile  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci-workflows.yml  run-docker-tests.yml
dev/: __init__.py
dev/mocks/: __init__.py  storage.py
dev/mocks/services/: mock_greeting_service.py
src/typ_tmpl/: __main__.py  context.py  errors.py  main.py
src/typ_tmpl/commands/: __init__.py  add.py  delete.py  greet.py  list.py
src/typ_tmpl/config/: __init__.py  settings.py
src/typ_tmpl/core/: __init__.py  container.py
src/typ_tmpl/protocols/: __init__.py  storage.py
src/typ_tmpl/services/: greeting_service.py
src/typ_tmpl/storage/: __init__.py  filesystem.py
tests/: conftest.py
tests/api/: conftest.py  test_api.py
tests/e2e/: conftest.py  test_health.py
tests/intg/: conftest.py  test_interactions.py
tests/unit/: conftest.py  test_context.py  test_greeting_service.py  test_storage.py
