[project]
name = "typ-tmpl"
version = "0.1.0"
description = "Minimal Python CLI template using Typer."
requires-python = ">=3.12"
dependencies = [
    "rich>=14.0.0,<15.0.0",
    "typer>0.20.0,<1.0.0",
]

[project.scripts]
typ-tmpl = "typ_tmpl.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.1",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/typ_tmpl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
addopts = "-q -s --tb=short"

[tool.ruff]
target-version = "py312"
exclude = [
    "__pycache__",
    "migrations",
    "db.sqlite3",
    "*.pyc",
    ".uv-cache",
    ".cache",
    "*/.cache/*",
    ".venv",
    "venv",
    "env",
    "*/bin/**",
    "*/lib/**",
    "*/share/**",
    "*/etc/**",
    "*/pyvenv.cfg"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["tests/"]